# embedded-pill-timer

./: .clangd  CMakeLists.txt  build.bat  flash.bat
components/u8g2/: CMakeLists.txt  u8g2_esp32_hal.c  u8g2_esp32_hal.h
main/: CMakeLists.txt  buzzer.c  buzzer.h  debug_console.c  debug_console.h  defines.h  display.c  display.h  flash.c  flash.h  main.c  menus.c  menus.h  pcf8563.c  pcf8563.h  pill_timer.h  pill_timer_mgr.c  pill_timer_mgr.h  rtc.c  rtc.h
